style.css
:root {
    --triforce-font: 'Triforce';
    --button-clr: #5A3C57;
    --txt: #FFFBCB;
    --bg-clr: #1B1725;
    --box-shadow: #AB9D91;
    --form-box-clr: #3b314a;
    --input-border-clr: #B6A754;
    --input-selected-clr: #1B1725;
    --input-error-clr: #AB0800;
    --gold: #c6a645;
}

@font-face {
    font-family: "triforce";
    src: url(fonts/triforce-webfont.woff) format("woff");
    font-weight: normal;
    font-style: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    font-family: 'EB Garamond', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: var(--txt);
    /* outline: 1px solid red; */
}

body {
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: stretch;
    font-size: 1.2rem;
    /* overflow: hidden; */
}

.card-container {
    display: flex;
}

.card-container,
.logo {
    display: flex;
    flex-flow: row wrap;
    width: 100%;
}

/* left - side */
.left-hero {
    background-image: url(images/backgroun-img.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    flex: 2;
    position: relative;
}

.logo {
    height: auto;
    background-color: rgba(0,0,0,0.7);
    position: absolute;
    width: 100%;
    top: 60vh;
    gap: 1vw;
    padding: 15px 0;
    justify-content: center;
    align-items: center;
}

.img-quote {
    height: auto;
    /* background-color: rgba(0,0,0,0.6); */
    position: absolute;
    width: 100%;
    padding: 10px;
    text-align: center;
    bottom: 0;
    color: rgba(255, 255, 255, 0.597);

}

h1 {
    color: white;
    font-size: 1.8rem;
}

h1, .quote-text {
    font-family: var(--triforce-font);
    letter-spacing: 0.25rem;
}



.triforce {
    height: 10vh;
}

/* right - side */

.right-hero {
    flex: 4;
    background-color: var(--bg-clr);
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
}

.left-padding {
    padding-left: 3vw;
}

.sword {
    font-family: var(--triforce-font);
    font-size: clamp(2rem, 5vw, 7rem);
    display: inline-block;
    text-align: center;
    vertical-align: middle;
}

.text-top {
    font-weight: 500;
    font-size: clamp(16px, 4vw, 28px);
    line-height: 1.6;
    /* padding-top: 3em; */
    /* width: 60ch; */
}

.top-text {
    font-weight: 500;
    width: 90%;
    font-size: 1.2rem;
    /* padding-top: 5em; */
    /* background-color: var(--top-box-clr); */
}

.remote-text {
    margin: 25px 0 25px;
}

.form {
    background-color: var(--form-box-clr);
    box-shadow: 0 10px 20px -2px var(--box-shadow);
    display: flex;
    flex-flow: row wrap;
    gap: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
    
}


.input {
    display: flex;
    flex-flow: column wrap;
    width: 40%;
    font-size: 1rem;
    text-transform: uppercase;
    opacity: 50%;
}

.form-title {
    width: 100%;
    font-size: clamp(16px, 4vw, 20px);
    font-weight: 500;
}

input {
    background-color: var(--bg-color);
    color: var(--gold);
    border: 3px solid var(--input-border-clr);
    border-radius: 3px;
    padding: 10px 0;
    outline:none;
    font-family: var(--triforce-font);
    letter-spacing: 1.8;
    font-size: 1.6rem;
}

input:focus {
    outline: none;
    border: 3px solid var(--input-selected-clr);
    box-shadow: 2px 2px 5px var(--box-shadow);
}

input:valid {
    border: 3px solid green;
}

input:focus.error {
    border: 3px solid rgba(179, 5, 5, 0.798);
}

#passwordError {
    font-weight: bold;
}

button {
    background-color: var(--bg-clr);
    color: var(--button-clr);
    font-weight: 700;
    font-size: 1.2em;
    border: 2px solid var(--button-clr);
    border-radius: 5px;
    padding: 10px 40px;
    margin: 40px 0px;
    height: 50px;

}

button:hover {
    background-color: var(--button-clr);
    color: var(--input-border);
}

button:active {
    border: 2px solid var(--button-clr);
}

.log-in {
    display: flex;
    gap: 5px;
}

a {
    text-decoration: none;
    color: var(--txt);
    font-weight: 700;
}

a:hover {
    color: var(--button-clr)
}


@media only screen and (max-width: 600px) {

    .img-quote {
        display: none;
    }
    .card-container {
        flex-direction: column;
        height: auto;
        text-align: center;
    }
    .left-hero {
        width: 100vw;
        height: 15vh;
        display: flex;
        background-size: 100vw;
        background-position: 20% 20%;
    }

    .logo {
        width: 100vw;
        height: 15vh;
        position: static;
        gap: 10px;
    }

    .right-hero {
        width: auto;
        height: auto;
    }

    .top-text {
        /* width: 40ch; */
        margin-top: 30px;
        /* font-size: 0.9rem; */
    }

    .left-padding {
        padding: 10px 20px;
    }

    .remote-text {
        padding: 20px 0;
        margin: 0;
    }

    .form {
        flex-flow: column nowrap;
        align-items: center;
    }
    .input {
        text-align: left;
        width: auto;
        font-size: 0.9em;
        justify-content: center;
        align-items: center;
    }
    input {
        font-size: 1.5rem;
        height: 2.3rem;
        width: 70vw;
    }
    .button,
    .log-in {
        display: flex;
        justify-content: center;
        margin-bottom: 0;
    }
    button {
        margin-bottom: 0;
        width: 60vw;
        padding: 10px 5px;
    }

}

